--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,138 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.Mynavbar
+{
+  display: inline-block;
+  background:rgb(197, 223, 231);
+  width:100%;
+}
+.Mynavbar li
+{
+  display: inline-block;
+  padding:20px;
+  cursor: pointer;
+}
+.Mynavbar li:hover{
+  border-bottom: 2px solid rgb(13, 87, 97);
+}
+.firstext
+{
+  font-size: 20px;
+  font-family: sans-serif;
+  margin: 0px;
+  padding:8px 8px 0px 8px;
+}
+.mydiv
+{
+  background: lightblue;
+  height: 70vh;
+  width:50vw;
+  margin-left: 300px;
+  border:2px
+}
+.myInput 
+{
+  height: 30vh;
+  width:48vw;
+  margin:5px;
+  border:none;
+  border-radius:10px;
+
+}
+.myInput[type='text']
+{
+  font-size: 20px;
+  overflow: scroll;
+}
+
+.myBtns
+{
+  border:2px solid rgb(8, 116, 143);
+  background:lightgrey;
+  height: 30px;
+  font-family:sans-serif;
+  font-size: 15px;
+  margin:2px;
+  border-radius: 18px;
+  cursor: pointer;
+  
+}
+.myBtns:hover{
+  background: rgb(8, 116, 143);
+  color:whitesmoke
+}
+.myBtnsfam
+{
+  
+  border:2px solid rgb(8, 116, 143);
+  background:lightgrey;
+  height: 30px;
+  font-family:sans-serif;
+  font-size: 15px;
+  margin:2px;
+  border-radius: 18px;
+}
+.myBtnsfam:hover{
+  background: rgb(8, 116, 143);
+  color:whitesmoke
+}
+.myfamilyul
+{
+  position: absolute;
+  display: none;
+  list-style: none;
+  cursor: pointer;
+}
+.myfamilyul li{
+  list-style: none;
+  border:2px solid rgb(8, 116, 143);
+  margin:3px;
+  height: 30px;
+  width:90px;
+  color:rgb(9, 57, 71);
+  background:lightgrey;
+  border-radius: 15px;
+  font-size: 16px;
+  padding:2px;
+  cursor: pointer;
+  
+}
+.myfamilyul li:hover{
+  background: rgb(8, 116, 143);
+  color:whitesmoke
+}
+
+.myfamli 
+{
+  display:block;
+}
+.mysizul
+{
+  position: absolute;
+  display: none;
+  list-style: none;
+  cursor: pointer;
+}
+.mysizul li{
+  list-style: none;
+  border:2px solid rgb(8, 116, 143);
+  margin:3px;
+  height: 30px;
+  width:90px;
+  color:rgb(9, 57, 71);
+  background:lightgrey;
+  border-radius: 15px;
+  font-size: 16px;
+  padding:2px;
+  cursor: pointer;
+  
+}
+.mysizli 
+{
+  display:block;
+}
+.mysizul li:hover{
+  background: rgb(8, 116, 143);
+  color:whitesmoke
+}
